# strategy_testing

./: .env.example  .gitignore  README.md  catchup_run.ps1  pyproject.toml  start_server.ps1  watchdog.ps1
.github/workflows/: ci.yml  research-batch.yml
configs/: experiment_space.yaml  research_criteria.yaml  scanner_universe.yaml
docs/: architecture.md  github_deployment.md  migration_checklist.md  private_public_split.md  public_repo_hardening.md  resources.md
docs/handoff/: ARCHITECTURE.md  DEBUGGING.md  EXTENDING.md  FIX_BRIEF_watchdog_fratricide.md  RUNBOOK.md  SYSTEM_PROMPT.md
examples/: sample_metrics.json
examples/sanitized_research_state/: README.md
n8n/: auto_research_workflow.json  daily_scan_workflow.json  daily_signals_workflow.json  strategy_research_workflow.json
pine/: labx_bollinger_reversion.pine
schemas/: batch_request.schema.json  experiment_log.schema.json  research_run.schema.json  result_bundle_manifest.schema.json
src/strategy_lab/: __init__.py  alpaca_data.py  analysis.py  auto_research.py  backtest.py  batch_runner.py  cli.py  (+22 more)
tests/: test_alpaca_data.py  test_analysis.py  test_auto_research.py  test_backtest.py  test_batch_runner.py  test_defenders.py  test_encrypted_bundle.py  test_experiment_generator.py  test_experiment_log.py  test_handoff.py  test_indicators.py  test_jsonl_merge.py  test_portfolio_backtest.py  test_private_storage.py  test_reporting.py  test_run_ledger.py  test_scanner.py  test_scoring.py  test_server_endpoints.py  test_signal_journal.py  test_significance.py  test_vintage.py  test_yahoo_data.py
(+6 files in other folders)
