[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-strategy-development-lab"
version = "0.1.0"
description = "Research-focused stock strategy development scaffold"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
strategy-lab = "strategy_lab.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
