[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-strategy-development-lab"
version = "0.1.0"
description = "Research-focused stock strategy development scaffold"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0",
  "PyYAML>=6.0"
]

[project.scripts]
strategy-lab = "strategy_lab.cli:main"

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.28",
  "python-dotenv>=1.0",
]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.28",
  "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
